# zwayland

./: README.adoc  README.md  meson.build
.github/workflows/: test.yml
include/: zwc.h
protocol/: meson.build
server/: callback.c  callback.h  compositor.c  compositor.h  compositor_global.c  compositor_global.h  keyboard.c  keyboard.h  main.c  meson.build  output.c  output.h  pointer.c  pointer.h  region.c  region.h  seat.c  seat.h  shell.c  shell.h  shell_surface.c  shell_surface.h  surface.c  surface.h  util.c  util.h  xdg_popup.c  xdg_popup.h  xdg_positioner.c  xdg_positioner.h  xdg_surface.c  xdg_surface.h  xdg_toplevel.c  xdg_toplevel.h  xdg_wm_base.c  xdg_wm_base.h  xdg_wm_base_global.c  xdg_wm_base_global.h  zxdg_output.c  zxdg_output.h  (+2 more)
zwc/: meson.build  shm_pool.c  shm_pool.h  util.c  util.h  zwc_display.c  zwc_display.h  zwc_global.c  zwc_global.h  zwc_os.c  zwc_os.h  zwc_virtual_object.c  zwc_virtual_object.h
